--- a/css/style.css
+++ b/css/style.css
@@ -435,9 +435,9 @@ hr {
     padding: 0.9375rem 2.25rem;
     background: #bd102d;
     box-shadow: none;
-    -webkit-transform: scale(1.05, 1.05);
-    -moz-transform: scale(1.05, 1.05);
-    transform: scale(1.05, 1.05); }
+    -webkit-transform: scale(1.05, 1);
+    -moz-transform: scale(1.05, 1);
+    transform: scale(1.05, 1); }
   .button:active {
     -webkit-transform: scale(0.95, 0.9);
     -moz-transform: scale(0.95, 0.9);
@@ -609,7 +609,7 @@ h4 {
       color: rgba(0, 0, 0, 0.9); }
 
 .home-header {
-  background: #150d0a url(../images/sean-bamboo.jpg) bottom center no-repeat;
+  background: #150d0a url(https://seanockert.com/images/sean-bamboo.jpg) bottom center no-repeat;
   background-size: cover;
   padding: 1.875rem 0;
   min-height: 390px; }
@@ -648,7 +648,7 @@ h4 {
 .parallax {
   overflow: hidden; }
   .parallax #bamboo {
-    background-image: url(../images/sean-bamboo-bg.jpg);
+    background-image: url(https://seanockert.com/images/sean-bamboo-bg.jpg);
     -webkit-perspective: 400px;
     -webkit-perspective-origin: 50% 50%;
     -webkit-transform-style: preserve-3d;
@@ -822,17 +822,9 @@ h4 {
   letter-spacing: 0.1em;
   margin-bottom: 1.875rem;
   position: relative;
-  overflow: hidden; }
-  .home-content h2:after,
-  .page-section h3:after {
-    position: absolute;
-    top: 48%;
-    overflow: hidden;
-    width: 100%;
-    height: 1px;
-    margin-left: 12px;
-    content: "\a0";
-    background-color: #ddd; }
+  overflow: hidden;
+  border-bottom: 2px solid #fade4e;
+  padding-bottom: 0.9375rem; }
 
 /* Footer  ---------------------- */
 #footer {
@@ -939,6 +931,8 @@ h4 {
     font-size: 1.2em;
     margin-bottom: 0;
     line-height: 1.4; }
+    .page-header p span {
+      white-space: nowrap; }
   .page-header .button {
     background: rgba(255, 255, 255, 0.6);
     color: #26353f;
@@ -953,7 +947,7 @@ h4 {
       color: #ef6524;
       background: #fff; }
   .page-header.fruitninja {
-    background: #f5c96c url(../images/page/header-fruit-ninja.jpg) center center;
+    background: #f5c96c url(https://seanockert.com/images/page/header-fruit-ninja.jpg) center center;
     background-size: cover;
     color: rgba(0, 0, 0, 0.7); }
     .page-header.fruitninja h1 {
@@ -963,6 +957,15 @@ h4 {
     .page-header.fruitninja .button {
       color: #fff;
       background: #d32525; }
+  .page-header.neto {
+    background: #083e52;
+    background: linear-gradient(45deg, #0f7398, #083e52);
+    color: rgba(255, 255, 255, 0.7); }
+    .page-header.neto h1 {
+      color: #fff; }
+    .page-header.neto .button {
+      color: #373a36;
+      background: #ffc907; }
 
 .page-overview {
   text-align: center;
@@ -978,6 +981,9 @@ h4 {
   padding-bottom: 1.875rem; }
   .page-section h3 {
     margin-top: 3.75rem; }
+  .page-section h4 {
+    margin-top: 2.8125rem;
+    font-size: 1.25em; }
   .page-section h2 {
     margin-bottom: 0.9375rem; }
   .page-section p,
@@ -991,23 +997,31 @@ h4 {
     margin: 0 auto;
     max-width: 37em;
     padding: 0 0.9375rem; }
-    .page-section .row.wide {
-      max-width: 60em;
-      text-align: center;
-      padding: 0; }
-      .page-section .row.wide img {
-        width: 100%; }
+  .page-section figure img {
+    width: 100%; }
+
+@media screen and (min-width: 47em) {
+  .page-section .row figure {
+    margin-left: -5em;
+    margin-right: -5em; } }
+
+@media screen and (min-width: 60em) {
+  .page-section .row figure {
+    margin-left: -11.5em;
+    margin-right: -11.5em; } }
 
 .page-case {
   padding: 0.9375rem;
   padding-top: 1.875rem;
   margin: 1.875rem 0;
   margin-bottom: 0;
-  background: #fade4e;
+  background: #eee;
   border-radius: 4px; }
   .page-case h3 {
     margin-top: 0;
-    color: rgba(0, 0, 0, 0.5); }
+    color: rgba(0, 0, 0, 0.5);
+    border: none;
+    padding-bottom: 0; }
     .page-case h3:after {
       background-color: rgba(0, 0, 0, 0.15); }
   .page-case h4 {
