--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -190,7 +190,7 @@ h4 {
 
 // For cover photo
 .home-header {
-  background: #150d0a url(../images/sean-bamboo.jpg) bottom center no-repeat;
+  background: #150d0a url(https://seanockert.com/images/sean-bamboo.jpg) bottom center no-repeat;
   background-size: cover;
   padding: $base-padding 0;
   min-height: 390px;
@@ -247,7 +247,7 @@ h4 {
   overflow: hidden;
 
   #bamboo {
-    background-image: url(../images/sean-bamboo-bg.jpg);
+    background-image: url(https://seanockert.com/images/sean-bamboo-bg.jpg);
     -webkit-perspective: 400px;
     -webkit-perspective-origin: 50% 50%;
     -webkit-transform-style: preserve-3d;
@@ -472,10 +472,6 @@ h4 {
       @include vendor-prefix(transform, rotate(3deg));
       @include vendor-prefix(transition, all 0.2s ease-out);
     }
-
-    &:hover,
-    &:active {
-    }
   }
 }
 
@@ -490,17 +486,8 @@ h4 {
   margin-bottom: $base-padding;
   position: relative;
   overflow: hidden;
-
-  &:after {
-    position: absolute;
-    top: 48%;
-    overflow: hidden;
-    width: 100%;
-    height: 1px;
-    margin-left: 12px;
-    content: "\a0";
-    background-color: #ddd;
-  }
+  border-bottom: 2px solid $color-yellow;
+  padding-bottom: $base-padding/2;
 }
 
 /* Footer  ---------------------- */
