--- a/css/style.css
+++ b/css/style.css
@@ -518,9 +518,6 @@ a {
     text-decoration: underline;
     color: #116fb9; }
 
-a:focus {
-  outline: none; }
-
 /* Lists  ---------------------- */
 ul li,
 ol li {
@@ -752,7 +749,10 @@ h4 {
     .home-content #projects .intro p {
       font-size: 1.375em;
       margin: 0;
+      margin-bottom: 0.9375rem;
       color: #555; }
+      .home-content #projects .intro p:last-child {
+        margin: 0; }
     .home-content #projects .intro a {
       display: inline;
       padding: 0;
@@ -779,7 +779,7 @@ h4 {
     .home-content .skills li strong {
       color: #26353f; }
   .home-content .cta {
-    font-size: 2.5em;
+    font-size: 1.375em;
     text-align: center;
     font-weight: 900;
     padding: 0.9375rem;
@@ -815,10 +815,10 @@ h4 {
 .home-content h2,
 .page-section h3 {
   font-size: 1em;
-  color: #555;
+  color: #222;
   text-transform: uppercase;
   line-height: 1.2;
-  font-weight: 300;
+  font-weight: normal;
   letter-spacing: 0.1em;
   margin-bottom: 1.875rem;
   position: relative;
@@ -869,7 +869,7 @@ h4 {
         margin: 0 auto;
         width: 90px;
         margin-bottom: 4px; }
-      #page .icon-list a:hover {
+      #page .icon-list a:hover, #page .icon-list a:focus {
         text-decoration: none;
         -webkit-transform: scale(1.1);
         -moz-transform: scale(1.1);
@@ -993,22 +993,47 @@ h4 {
     margin-bottom: 1.875rem; }
   .page-section li {
     margin-bottom: 0.46875rem; }
+  .page-section a:active {
+    background: #fade4e; }
   .page-section .row {
     margin: 0 auto;
     max-width: 37em;
     padding: 0 0.9375rem; }
-  .page-section figure img {
-    width: 100%; }
+  .page-section figure {
+    margin-bottom: 1.875rem;
+    text-align: center; }
+    .page-section figure img {
+      max-width: 100%;
+      box-shadow: 0 0 3px rgba(0, 0, 0, 0.1); }
+  .page-section figcaption {
+    text-align: center;
+    font-size: 0.875em;
+    color: #555;
+    display: block;
+    padding: 0.46875rem;
+    font-style: italic; }
+  .page-section p img {
+    margin-bottom: 1.875rem;
+    display: block;
+    max-width: 200px; }
 
 @media screen and (min-width: 47em) {
   .page-section .row figure {
     margin-left: -5em;
-    margin-right: -5em; } }
+    margin-right: -5em; }
+  .page-section .row p img {
+    float: right;
+    margin-right: -5em;
+    margin-top: 0;
+    margin-left: 1.875rem;
+    max-width: 100%; } }
 
 @media screen and (min-width: 60em) {
   .page-section .row figure {
-    margin-left: -11.5em;
-    margin-right: -11.5em; } }
+    margin-left: -7em;
+    margin-right: -7em; }
+  .page-section .row p img {
+    margin-right: -7em; } }
 
 .page-case {
   padding: 0.9375rem;
@@ -1035,11 +1060,11 @@ h4 {
 .page-cta {
   padding: 3.75rem 0.9375rem;
   font-weight: 400; }
-  .page-cta h2 {
+  .page-cta h4 {
     color: #26353f;
     font-weight: 900;
-    font-size: 2.5em; }
-    .page-cta h2 img {
+    font-size: 1.375em; }
+    .page-cta h4 img {
       display: block;
       height: 70px;
       margin: 0 auto;
@@ -1050,14 +1075,16 @@ h4 {
       -webkit-transition: 0.15s all ease-out;
       -moz-transition: 0.15s all ease-out;
       transition: 0.15s all ease-out; }
-    .page-cta h2 a,
-    .page-cta h2 a:hover {
+    .page-cta h4 a,
+    .page-cta h4 a:hover,
+    .page-cta h4 a:focus {
       color: #26353f; }
-    .page-cta h2 a:hover img {
+    .page-cta h4 a:hover img,
+    .page-cta h4 a:focus img {
       -webkit-transform: scale(1);
       -moz-transform: scale(1);
       transform: scale(1); }
-    .page-cta h2 span {
+    .page-cta h4 span {
       color: #ed2d4d; }
 
 /* Tablet and up media queries  ---------------------- */
@@ -1149,8 +1176,7 @@ h4 {
       max-width: 60em; }
   .page-section p,
   .page-section li,
-  .page-section h3,
-  .page-section h4 {
+  .page-section h3 {
     font-size: 1.2em; }
   .page-section p,
   .page-section li {
