--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -71,10 +71,6 @@ a {
   }
 }
 
-a:focus {
-  outline: none;
-}
-
 /* Lists  ---------------------- */
 
 ul,
@@ -393,7 +389,12 @@ h4 {
     p {
       font-size: $font-size-medium;
       margin: 0;
+      margin-bottom: $base-padding/2;
       color: $color-text-light;
+
+      &:last-child {
+        margin: 0;
+      }
     }
 
     a {
@@ -440,7 +441,7 @@ h4 {
   }
 
   .cta {
-    font-size: $font-size-large;
+    font-size: $font-size-medium;
     text-align: center;
     font-weight: $strong;
     padding: $base-padding/2;
@@ -478,10 +479,10 @@ h4 {
 .home-content h2,
 .page-section h3 {
   font-size: $font-size-base;
-  color: $color-text-light;
+  color: $color-text;
   text-transform: uppercase;
   line-height: 1.2;
-  font-weight: $light;
+  font-weight: normal;
   letter-spacing: 0.1em;
   margin-bottom: $base-padding;
   position: relative;
