Reduce inner padding on mobile

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -265,7 +265,7 @@ h4 {
   background: $color-off-white;
 
   .inner {
-    padding: $base-padding*2 $base-padding/2;
+    padding: $base-padding $base-padding/2;
     padding-bottom: 0;
   }
 
