--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -4,7 +4,7 @@
     display: none !important;
   }
   .hidden-small {
-    display: block !important;
+    display: inline-block !important;
   }
   h3 .hidden-small {
     display: inline-block !important;
