--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -101,6 +101,7 @@
 
 .page-header {
   padding: $base-padding * 2 $base-padding/2;
+  padding-bottom: $base-padding * 3;
   text-align: center;
 
   h1 {
