--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,7 +6,7 @@ $color-light-grey: #eee;
 $color-mute: #999;
 
 $color-base: #ed2d4d; //red
-$color-purple: #4e51ce;
+$color-purple: #2e1988;
 $color-red: #ed2d4d;
 $color-blue: #2a97ec;
 $color-green: #30c81e;
