--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -249,10 +249,12 @@
   figure {
     margin-bottom: $base-padding;
     text-align: center;
+    border-radius: 4px;
 
     img {
       max-width: 100%;
       box-shadow: 0 0 3px rgba(0,0,0,0.1);
+      border-radius: inherit;
     }
   }
 
