--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
   margin: 0; }
 
 a {
-  -webkit-tap-highlight-color: transparent; }
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 a:focus {
   outline: thin dotted; }
