--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -43,7 +43,7 @@
         margin-bottom: 4px;
       }
 
-      &:hover, 
+      &:hover,
       &:focus {
         text-decoration: none;
         @include vendor-prefix(transform, scale(1.1));
@@ -253,7 +253,7 @@
 
     img {
       max-width: 100%;
-      box-shadow: 0 0 3px rgba(0,0,0,0.1);
+      box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
       border-radius: inherit;
     }
   }
@@ -294,8 +294,6 @@
         }
       }
     }
-
-
   }
 }
 
@@ -309,7 +307,7 @@
 
       p {
         img {
-         margin-right: -7em;
+          margin-right: -7em;
         }
       }
     }
