--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -286,6 +286,7 @@ h4 {
 
       figure {
         margin-bottom: $base-padding/2;
+        max-width: 40rem;
         border-radius: 4px;
         overflow: hidden;
 
