--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -207,6 +207,7 @@
 .page-section {
   padding-top: $base-padding/2;
   padding-bottom: $base-padding;
+  position: relative;
 
   h3 {
     margin-top: $base-padding * 2;
