--- a/assets/style.css
+++ b/assets/style.css
@@ -238,6 +238,21 @@ main {
   }
 }
 
+@keyframes shine {
+  0% {
+    left: -50%;
+    opacity: 0;
+  }
+  50% {
+    left: 25%;
+    opacity: 0.5;
+  }
+  100% {
+    left: 100%;
+    opacity: 0;
+  }
+}
+
 h1 {
   font-size: var(--font-size-h1);
   font-weight: 900;
@@ -427,21 +442,56 @@ section h2 {
   cursor: pointer;
 }
 
-.project:hover img,
-.project:focus img {
-  box-shadow: 0 0 30px var(--color-background-contrast);
-  transform: scale(1.05);
-}
-
-.project:active img {
-  box-shadow: none;
-  transform: scale(0.95);
-}
-
 .project:hover a,
 .project:focus a {
   color: var(--color-brand-dark);
   text-decoration: underline;
+}
+
+.shiny figure {
+  position: relative;
+  transition: transform 0.2s ease-out;
+}
+
+.shiny figure::before,
+.shiny figure::after {
+  content: '';
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+  transition: opacity 0.2s ease-out;
+  width: 100%;
+}
+
+.shiny figure::after {
+  border-radius: var(--border-radius);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  z-index: -1;
+}
+
+.shiny figure::before {
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+}
+
+.shiny:hover figure,
+.shiny:focus figure {
+  box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075), 0 0.125rem 0.125rem hsl(0deg 0% 0% / 0.075),
+    0 0.25rem 0.25rem hsl(0deg 0% 0% / 0.075), 0 0.5rem 0.5rem hsl(0deg 0% 0% / 0.075),
+    0 1rem 1rem hsl(0deg 0% 0% / 0.075);
+  transform: perspective(1000px) rotateX(-6deg) rotateY(-6deg) scale(1.05);
+}
+
+.shiny:hover figure::before,
+.shiny:focus figure::before {
+  animation: shine 0.45s linear forwards;
+  opacity: 1;
+  transform: skew(30deg);
 }
 
 .face {
@@ -641,6 +691,10 @@ figcaption {
   gap: var(--padding-base);
   text-decoration: none;
   margin: var(--padding-2x) 0;
+}
+
+.icon-list .shiny figure {
+  border-radius: 1.2rem;
 }
 
 .twitter-tweet {
